# Website-Content-Search

./: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.front.conf
Backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
Frontend/: Dockerfile  index.html  nginx.front.conf  package-lock.json  package.json
Frontend/src/: App.css  App.jsx  index.css  main.jsx
Frontend/src/components/: ResultCard.css  ResultCard.jsx  SearchBar.css  SearchBar.jsx
volumes/etcd/member/snap/: db
volumes/milvus/rdb_data/: IDENTITY  LOG
volumes/milvus/rdb_data_meta_kv/: IDENTITY  LOG
volumes/minio/.minio.sys/: format.json
volumes/minio/.minio.sys/tmp/.trash/: cf3a14fd-7004-46d1-bdc0-31ecb23fb860
