[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.123.5",
    "grpcio>=1.57",
    "grpcio-tools>=1.57",
    "httpx>=0.28.1",
    "numpy>=2.3.5",
    "pymilvus>=2.4.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.2",
    "transformers>=4.57.3",
    "uvicorn[standard]>=0.38.0",
]
